--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
   - build
 
 build:go:
-  stage: go_build
+  stage: build
   script:
     - apk --no-cache -q add git make build-base
     - make all
