--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,11 +39,7 @@ jobs:
   build_and_push_docker:
     machine:
       image: ubuntu-1604:202007-01
-    working_directory: ~/go/src/github.com/InSitu-Software/checked
     steps:
-      - checkout
-      - attach_workspace:
-          at: .
       - aws-ecr/build-and-push-image:
           account-url: AWS_ECR_ACCOUNT_URL
           aws-access-key-id: AWS_ACCESS_KEY_ID
@@ -72,3 +68,4 @@ workflows:
     jobs:
       - build_and_push_docker:
           type: approval
+          context: Insitu_AWS
